--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,9 @@ a {
 img {
     max-width: 100%;
 }
+
+.wrapper {
+    background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 50%, rgba(79, 77, 77, 1) 100%);
+    width: 100%;
+}
