--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: "Noto Serif", serif;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Noto Serif", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 p {
-    color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
 a {
-    text-decoration: none;
-}  
+  text-decoration: none;
+}
 
 img {
-    max-width: 100%;
+  max-width: 100%;
+}
+
+.donate img {
+  padding: 1em;
+  margin: auto;
+}
+
+.mail {
+  padding-left: 1em;
+}
+
+.disclaimer {
+  color: rgba(0, 0, 0, 0.25) !important;
+}
+.title-margin {
+  margin-top: 1em;
 }
